--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "csvjson": "^5.1.0",
-    "csvtojson": "^2.0.8"
+    "csvtojson": "^2.0.8",
+    "yargs": "^12.0.5"
   }
 }
