--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
   "dependencies": {
     "csvjson": "^5.1.0",
     "csvtojson": "^2.0.8",
+    "ejs": "^2.6.1",
+    "express": "^4.16.4",
+    "http-errors": "^1.7.1",
+    "through2": "^3.0.0",
     "yargs": "^12.0.5"
   }
 }
