--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "main": "src/app.js",
   "scripts": {
     "build": "babel src --out-dir ./dist --source-maps",
-    "start": "nodemon --exec babel-node src/app.js",
+    "start": "nodemon src/index.js",
+    "text-server": "nodemon src/simple-servers/plain-text-server.js",
+    "html-server": "nodemon src/simple-servers/html-server.js",
+    "json-server": "nodemon src/simple-servers/json-server.js",
+    "echo-server": "nodemon src/simple-servers/echo-server.js",
+    "cli-app": "nodemon --exec babel-node src/cli/app.js",
     "lint": "./node_modules/.bin/eslint src/**/*.js src/*.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -23,6 +28,7 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "csvjson": "^5.1.0",
     "csvtojson": "^2.0.8",
     "ejs": "^2.6.1",
