--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "http-errors": "^1.7.1",
+    "joi": "^14.3.1",
     "through2": "^3.0.0",
     "yargs": "^12.0.5"
   }
