--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express": "^4.16.4",
     "http-errors": "^1.7.1",
     "joi": "^14.3.1",
+    "jsonwebtoken": "^8.4.0",
     "through2": "^3.0.0",
     "yargs": "^12.0.5"
   }
