--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "body-parser": "^1.18.3",
     "csvjson": "^5.1.0",
     "csvtojson": "^2.0.8",
+    "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "http-errors": "^1.7.1",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.4.0",
+    "nconf": "^0.10.0",
     "through2": "^3.0.0",
     "yargs": "^12.0.5"
   }
