--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.4.0",
     "nconf": "^0.10.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "through2": "^3.0.0",
     "yargs": "^12.0.5"
   }
