--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "nconf": "^0.10.0",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
-    "passport-google-oauth": "^1.0.0",
+    "passport-google-oauth2": "^0.1.6",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
     "through2": "^3.0.0",
