--- a/package.json
+++ b/package.json
@@ -34,9 +34,12 @@
     "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "express-async-errors": "^3.1.1",
     "http-errors": "^1.7.1",
     "joi": "^14.3.1",
+    "joi-objectid": "^2.0.0",
     "jsonwebtoken": "^8.4.0",
+    "mongoose": "^5.4.17",
     "nconf": "^0.10.0",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
