--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
     "csvjson": "^5.1.0",
     "csvtojson": "^2.0.8",
