--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,8 @@
   "extends": "airbnb-base",
   "rules": {
     "arrow-parens": ["error", "always"],
-    "no-underscore-dangle": "off"
+    "no-underscore-dangle": "off",
+    "object-curly-newline": ["error", { "consistent": true }],
+    "newline-per-chained-call": ["warn"]
   }
 }
