--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "joi": "^14.3.1",
     "joi-objectid": "^2.0.0",
     "jsonwebtoken": "^8.4.0",
+    "mongodb": "^3.1.13",
     "mongoose": "^5.4.17",
     "nconf": "^0.10.0",
     "passport": "^0.4.0",
