--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
-    "bcrypt": "^3.0.4",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "csvjson": "^5.1.0",
     "csvtojson": "^2.0.8",
@@ -49,6 +49,9 @@
     "passport-google-oauth2": "^0.1.6",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
+    "pg": "^7.9.0",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^5.1.0",
     "through2": "^3.0.0",
     "yargs": "^12.0.5"
   }
